@@ -6,10 +6,8 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.beans.factory.ObjectProvider;
 import uk.gov.hmcts.ecm.common.model.servicebus.CreateUpdatesDto;
 import uk.gov.hmcts.ecm.common.model.servicebus.datamodel.CreationDataModel;
-import uk.gov.hmcts.ecm.common.servicebus.ServiceBusSender;
 import uk.gov.hmcts.ethos.replacement.docmosis.domain.repository.messagequeue.CreateUpdatesQueueRepository;
 import uk.gov.hmcts.ethos.replacement.docmosis.utils.InternalException;
 
@@ -27,10 +25,6 @@ class CreateUpdatesBusSenderTest {
 
     private CreateUpdatesBusSender createUpdatesBusSender;
     @Mock
-    private ServiceBusSender serviceBusSender;
-    @Mock
-    private ObjectProvider<ServiceBusSender> serviceBusSenderProvider;
-    @Mock
     private CreateUpdatesQueueRepository createUpdatesQueueRepository;
     @Mock
     private ObjectMapper objectMapper;
@@ -42,14 +36,8 @@ class CreateUpdatesBusSenderTest {
     private List<String> ethosCaseRefCollection;
 
     @BeforeEach
-    public void setUp() {
-        org.mockito.Mockito.when(serviceBusSenderProvider.getIfAvailable()).thenReturn(serviceBusSender);
-        createUpdatesBusSender = new CreateUpdatesBusSender(
-            serviceBusSenderProvider,
-            createUpdatesQueueRepository,
-            objectMapper,
-            false
-        );
+    void setUp() {
+        createUpdatesBusSender = new CreateUpdatesBusSender(createUpdatesQueueRepository, objectMapper);
         ethosCaseRefCollection = Arrays.asList("4150001/2020", "4150002/2020",
                 "4150003/2020", "4150004/2020", "4150005/2020");
         createUpdatesDto = getCreateUpdatesDto(ethosCaseRefCollection);
@@ -65,7 +53,7 @@ class CreateUpdatesBusSenderTest {
     @Test
     void runMainMethodTestException() {
         doThrow(new InternalException(ERROR_MESSAGE))
-                .when(serviceBusSender).sendMessage(any());
+            .when(createUpdatesQueueRepository).save(any());
         createUpdatesBusSender.sendUpdatesToQueue(createUpdatesDto, creationDataModel,
                 new ArrayList<>(), String.valueOf(ethosCaseRefCollection.size()));
     }
@@ -82,7 +70,7 @@ class CreateUpdatesBusSenderTest {
 
     private CreationDataModel getCreationDataModel(List<String> ethosCaseRefCollection) {
         return CreationDataModel.builder()
-                .lead(ethosCaseRefCollection.get(0))
+                .lead(ethosCaseRefCollection.getFirst())
                 .multipleRef("4150001")
                 .build();
     }
